# cm4-wrt-a

./: .gitignore  LICENSE  README.md  build-openwrt.sh  build-pico-firmware.sh  setup-influxdb.sh
.github/: FUNDING.yml
CM4/: CMakeLists.txt  Curl.hpp  Dockerfile.cross  InfluxDB.cpp  InfluxDB.hpp  Makefile  SensorID.hpp  Utils.cpp  Utils.hpp  build-picod.sh  cli.cpp  cli.hpp  config.txt  config_rpios.txt  create_picod_links.sh  diffconfig  main.cpp  pico_pkt_fan_pwm.cpp  pico_pkt_ping.cpp  pico_pkt_shutdown.cpp  pico_pkt_temperature.cpp  pico_pkt_version.cpp  pico_pkt_watchdog.cpp  picod.conf  picod.service  picod_service  settings.hpp  ubus_server.cpp  ubus_server.hpp
CM4/cmake/: generate_version.cmake
CM4/debian/: changelog  control  copyright  rules
CM4/package/utils/picod/: Makefile
CM4/src/: ConcurrentQueue.hpp  Curl.cpp  Event.cpp  Event.hpp  InfluxDB.cpp  InfluxDB.hpp  PacketHandler.cpp  PacketHandler.hpp  SSEDispatcher.cpp  SSEDispatcher.hpp  SensorID.hpp  TMP103_I2C.cpp  TMP103_I2C.hpp  Utils.cpp  Utils.hpp  WebServer.cpp  WebServer.hpp  cli.cpp  cli.hpp  client.cpp  i2c.c  i2c.h  main.cpp  pico_pkt_fan_pwm.cpp  pico_pkt_ping.cpp  pico_pkt_shutdown.cpp  pico_pkt_temperature.cpp  pico_pkt_version.cpp  pico_pkt_watchdog.cpp  settings.hpp  syshead.h  ubus_server.cpp  ubus_server.hpp
CM4/src/NLTemplate/: NLTemplate.cpp  NLTemplate.h
CM4/website/static/js/: appstate.js  dashboard.js  quit.js
CM4/website/static/styles/: dark-mode.css  dashboard.css  spinner.css
CM4/website/templates/: index.html
case/: CM4-WRT-A_Case_Top.stl
case/_01_/: CM4-WRT-A_Case_Bottom.stl
case/_02_/: CM4-WRT-A_Case_2_Bottom.stl  CM4-WRT-A_Case_2_Top.stl
pico/: CMakeLists.txt  cm4-wrt-a.c  cm4-wrt-a.h  pico_pkt_fan_pwm.c  pico_pkt_fan_pwm.h  pico_pkt_id.h  pico_pkt_ping.c  pico_pkt_ping.h  pico_pkt_shutdown.c  pico_pkt_shutdown.h  pico_pkt_temperature.c  pico_pkt_temperature.h  pico_pkt_version.c  pico_pkt_version.h  pico_pkt_watchdog.c  pico_pkt_watchdog.h  pkt_handler.h  thermistor.h  version.h
pico/cmake/: generate_version.cmake
